--- a/Email/login.html
+++ b/Email/login.html
@@ -70,12 +70,12 @@
     <form action="/login" method="post">
         <div>
             <label for="email">Email : </label>
-            <input type="email" id="eamil" name="email">
+            <input type="email" id="email" name="email">
         </div>
         <br>
         <div>
             <label for="password">password : </label>
-            <input type="text" id="password" name="password">
+            <input type="password" id="password" name="password">
         </div>
         <br><br>
         <input type="submit">
