--- a/Email/signup.html
+++ b/Email/signup.html
@@ -49,7 +49,7 @@
             border-radius: 5px;
         }
 
-        input[type="submit"] {
+        input[type="submit"],button {
             width: 100%;
             padding: 10px;
             border: none;
@@ -58,6 +58,11 @@
             color: white;
             font-size: 16px;
             cursor: pointer;
+        }
+        button>a{
+            text-decoration: none;
+            color: white;
+            font-weight: 400;
         }
 
         input[type="submit"]:hover {
@@ -90,14 +95,11 @@
             <label for="phoneNumber">phoneNumber : </label>
             <input type="number" id="phoneNumber" name="phoneNumber">
         </div>
-        <br>
-        <div>
-            <label for="isAdmin">isAdmin : </label>
-            <input type="text" id="isAdmin" name="isAdmin">
-        </div>
+        
         <br><br>
         <input type="submit" value="signup">
-        <a href="/login">Already have a account login</a>
+        <br><br>
+        <button><a href="/login">Already have a account login</a></button>
     </form>
     
     </center>
