--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             margin-bottom: 5px;
         }
 
-        input[type="text"],
+        input[type="password"],
         input[type="email"] {
             width: 100%;
             padding: 8px;
